avoid ring to be cropped

--- a/script/less/index.less
+++ b/script/less/index.less
@@ -114,6 +114,8 @@
 //  -webkit-transform: rotate(90deg);
 //  transform: rotate(90deg);
 
+  padding-right: 20px; // avoid ring to be cropped
+
   display: none; // only show for mobile
 }
 #page_control {
